	allow using a functionp to generate the arguments.

	* swank.lisp: Smarten up the label-value-line macros:
	  - support a :label emacs font property
	  - added key args: padding-length, display-nil-value,
	    hide-when-nil, splice-as-ispec, value-text
	  - label-value-line* will evaluate and splice the result
	    of the form after a @ character

2010-10-09  Raymond Toy  <toy.raymond@gmail.com>

	* swank-cmucl.lisp (codepoint-length): Implement codepoint-length
	to return the number of codepoints in cmucl's utf-16 strings.

	* swank-backend.lisp (:swank-backend): Export codepoint-length. 
	(codepoint-length): definterface codepoint-length.  Default is to
	use LENGTH.

	* swank-rpc.lisp (write-message): Call
	swank-backend:codepoint-length to get the correct length for
	emacs. 

2010-10-08  Christophe Rhodes  <csr21@cantab.net>

	Pass more detailed source location information to
	swank:compile-string-for-emacs.  Motivated by R's source location
	needs (where srcrefs are line/column based).

	* slime.el (slime-compile-string): Generate :line location format
	from start-offset, passing it through to
	swank:compile-file-for-emacs.
	(find-definition.2): Use new-style position.

	* swank.lisp (compile-string-for-emacs): Use only the offset from
	the position argument.

	* swank-backend.lisp (swank-compile-string): Fix docstring typo.

2010-10-07  Nikodemus Siivola  <nikodemus@random-state.net>

	Hanging on to a *log-output* from a previous image is bad on SBCL
	at least: it is initialized to an FD-STREAM, which cannot be
	reused from one image to another.

	Deal with this by using sb-ext:*save-hooks* to clear the stream.

	* swank-sbcl.lisp (deinit-log-output): New function.

2010-10-02  Helmut Eller  <heller@common-lisp.net>

	Rename slime-macro/compiler-macro-expand-1 => slime-expand-1

	* slime.el (slime-expand-1): Renamed from
	slime-macro/compiler-macro-expand-1.
	(slime-expand-1-inplace): Renamed from
	slime-macro/compiler-macro-expand-1-inplace.
